[package]
name = "pyvm"
version = "0.4.0"
authors = ["Jason Swift <anemele@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~4.3.23", features = ["derive", "env"] }
homedir = "0.2.1"

[profile.release]
strip = true
lto = 'thin'
