[package]
name = "pyvm"
version = "0.4.1"
authors = ["Jason Swift <anemele@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "~4.3.23", features = ["derive", "env"] }
homedir = "0.2.1"
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.15"

[profile.release]
strip = true
lto = 'thin'
